--- a/apps/site/src/components/widgets/Home/Hero/Hero.astro
+++ b/apps/site/src/components/widgets/Home/Hero/Hero.astro
@@ -18,7 +18,7 @@ const { className } = Astro.props as Props;
         <img
             src={heroImageDesktop.src}
             alt='Banner da nossa mascote no espaço.'
-            class='w-screen h-screen object-cover'
+            class='w-screen h-screen object-cover fixed'
             loading='eager'
         />
     </picture>
