--- a/apps/site/src/pages/design_system.astro
+++ b/apps/site/src/pages/design_system.astro
@@ -87,10 +87,10 @@ const AccentBox = ({ className = '' }) => {
                         <Fragment set:html={PrimaryBox({})} />
                     </div>
                     <div class='flex-1'>
-                        <Fragment set:html={SecondaryBox({})} />
+                        <Fragment set:html={AccentBox({})} />
                     </div>
                     <div class='flex-1'>
-                        <Fragment set:html={AccentBox({})} />
+                        <Fragment set:html={SecondaryBox({})} />
                     </div>
                 </div>
             </div>
@@ -103,13 +103,11 @@ const AccentBox = ({ className = '' }) => {
                     <div class='flex-1'>
                         <Fragment set:html={PrimaryBox({})} />
                     </div>
-
+                                        <div class='flex-1'>
+                                            <Fragment set:html={AccentBox({})} />
+                                        </div>
                     <div class='flex-1'>
                         <Fragment set:html={SecondaryBox({})} />
-                    </div>
-
-                    <div class='flex-1'>
-                        <Fragment set:html={AccentBox({})} />
                     </div>
                 </div>
             </div>
@@ -119,34 +117,34 @@ const AccentBox = ({ className = '' }) => {
                 <p>text-on-surface</p>
 
                 <div class='flex flex-col w-full gap-4'>
-                    <div class='flex flex-row w-full gap-4 bg-surface-container-lowest text-on-surface p-4 rounded-lg'>
+                    <div class='flex flex-row w-full gap-4 bg-surface-container-lowest justify-between text-on-surface p-4 rounded-lg'>
                         <p>bg-surface-container-lowest</p>
                         <p>text-on-surface</p>
+                    </div>
 
-                        <div class='flex flex-row w-full gap-4 bg-surface-container-low text-on-surface p-4 rounded-lg'>
+                        <div class='flex flex-row w-full gap-4 bg-surface-container-low justify-between text-on-surface p-4 rounded-lg'>
                             <p>bg-surface-container-low</p>
                             <p>text-on-surface</p>
                         </div>
 
-                        <div class='flex flex-row w-full gap-4 bg-surface-container text-on-surface p-4 rounded-lg'>
+                        <div class='flex flex-row w-full gap-4 bg-surface-container justify-between text-on-surface p-4 rounded-lg'>
                             <p>bg-surface-container</p>
                             <p>text-on-surface</p>
                         </div>
 
                         <div
-                            class='flex flex-row w-full gap-4 bg-surface-container-high text-on-surface p-4 rounded-lg'
+                            class='flex flex-row w-full gap-4 bg-surface-container-high justify-between text-on-surface p-4 rounded-lg'
                         >
                             <p>bg-surface-container-high</p>
                             <p>text-on-surface</p>
                         </div>
 
                         <div
-                            class='flex flex-row w-full gap-4 bg-surface-container-highest text-on-surface p-4 rounded-lg'
+                            class='flex flex-row w-full gap-4 bg-surface-container-highest justify-between text-on-surface p-4 rounded-lg'
                         >
                             <p>bg-surface-container-highest</p>
                             <p>text-on-surface</p>
                         </div>
-                    </div>
                 </div>
 
                 <div class='flex flex-col w-full gap-4 bg-primary-container text-on-primary-container p-4 rounded-lg'>
@@ -158,10 +156,10 @@ const AccentBox = ({ className = '' }) => {
                                 <Fragment set:html={PrimaryBox({})} />
                             </div>
                             <div class='flex-1'>
-                                <Fragment set:html={SecondaryBox({})} />
+                                <Fragment set:html={AccentBox({})} />
                             </div>
                             <div class='flex-1'>
-                                <Fragment set:html={AccentBox({})} />
+                                <Fragment set:html={SecondaryBox({})} />
                             </div>
                         </div>
                     </div>
@@ -178,10 +176,10 @@ const AccentBox = ({ className = '' }) => {
                                 <Fragment set:html={PrimaryBox({})} />
                             </div>
                             <div class='flex-1'>
-                                <Fragment set:html={SecondaryBox({})} />
+                                <Fragment set:html={AccentBox({})} />
                             </div>
                             <div class='flex-1'>
-                                <Fragment set:html={AccentBox({})} />
+                                <Fragment set:html={SecondaryBox({})} />
                             </div>
                         </div>
                     </div>
@@ -196,10 +194,10 @@ const AccentBox = ({ className = '' }) => {
                                 <Fragment set:html={PrimaryBox({})} />
                             </div>
                             <div class='flex-1'>
-                                <Fragment set:html={SecondaryBox({})} />
+                                <Fragment set:html={AccentBox({})} />
                             </div>
                             <div class='flex-1'>
-                                <Fragment set:html={AccentBox({})} />
+                                <Fragment set:html={SecondaryBox({})} />
                             </div>
                         </div>
                     </div>
