--- a/apps/site/src/pages/index.astro
+++ b/apps/site/src/pages/index.astro
@@ -20,9 +20,9 @@ const meta: MetaSEO = {
 
 <Layout {meta}>
     <Hero />
-    <div class='relative flex flex-col py-12 bg-surface-bright z-10'>
+    <div class='relative flex flex-col bg-surface-bright z-10'>
 
-        <section class='flex flex-col w-full sticky top-0 py-24'>
+        <section class='flex flex-col w-full md:sticky top-0 py-24'>
             <div class='sw-container flex flex-col space-y-10 z-10'>
                 <header class='text-center md:text-right'>
                     <h2 class='sw-display text-primary pb-2'>
@@ -35,7 +35,7 @@ const meta: MetaSEO = {
             </div>
         </section>
 
-        <section class='relative flex flex-col w-full py-12 overflow-visible bg-gradient-to-b from-transparent to-surface-bright to-25%'>
+        <section class='relative flex flex-col w-full py-12 overflow-visible bg-gradient-to-b from-transparent to-surface-bright'>
             <div class='sw-container flex flex-col space-y-10 z-20'>
                 <header class='flex flex-col space-y-4'>
                     <h2 class='uppercase text-on-surface'>Nossos serviços</h2>
@@ -96,7 +96,7 @@ const meta: MetaSEO = {
             style="clip-path: polygon(100% 100%, 100% 0, 0 0);" />
         </div>
             
-        <section class='relative flex flex-col w-full py-12 z-20 bg-surface-bright'>
+        <section class='relative flex flex-col w-full pb-12 z-20 bg-surface-bright'>
             <div class='sw-container flex flex-col space-y-10'>
                 <header class='flex flex-col space-y-2'>
                     <h2 class='uppercase text-on-surface'>Entre em contato</h2>
