--- a/apps/site/src/components/common/MetaTags.astro
+++ b/apps/site/src/components/common/MetaTags.astro
@@ -62,7 +62,7 @@ const {
         src={'https://www.googletagmanager.com/ns.html?id=' + config.googleTagId}
         height='0'
         width='0'
-        style='display:none;visibility:hidden'
+        style='display:none;visibility:hidden;'
     >
     </iframe>
 </noscript>
