--- a/apps/site/src/components/widgets/Footer.astro
+++ b/apps/site/src/components/widgets/Footer.astro
@@ -4,7 +4,7 @@
 
 <footer
     class='flex flex-col w-full pt-8 text-sm items-center bg-surface-dim text-on-surface shadow-2xl relative'
-    style='clip-path: polygon(0 0, calc(50% - 48px) 0, 50% 1.25rem, calc(50% + 48px) 0, 100% 0, 100% 100%, 0 100%)'
+    style='clip-path: polygon(0 0, calc(50% - 48px) 0, 50% 1.25rem, calc(50% + 48px) 0, 100% 0, 100% 100%, 0 100%);'
 >
     <div class='flex flex-row sw-container justify-between mt-4'>
         <div class='flex-col space-y-4'>
